--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "url": "https://github.com/chefaifaycal/pfc_Project/issues"
   },
   "homepage": "https://github.com/chefaifaycal/pfc_Project#readme",
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2"
+  },
   "dependencies": {
-    "tailwindcss": "^2.1.1"
+    "postcss-import": "^14.0.1"
   }
 }
